--- a/esphome/e1001.yaml
+++ b/esphome/e1001.yaml
@@ -43,7 +43,19 @@ interval:
   - interval: 60s
     then:
       - lambda: |-
-          // День: 06:00–23:00
+          // День: 07:00–8:00
+          auto t = id(sntp_time).now();
+          if (!t.is_valid()) return;
+          int h = t.hour;
+          if (h >= 7 && h < 8) {
+            ESP_LOGD("interval", "Daytime refresh: 1 min");
+            id(dashboard_image).update();   // обновить картинку
+          }  
+
+  - interval: 2min
+    then:
+      - lambda: |-
+          // День: 08:00–22:00
           auto t = id(sntp_time).now();
           if (!t.is_valid()) return;
           int h = t.hour;
