--- a/esphome/e1001.yaml
+++ b/esphome/e1001.yaml
@@ -1,5 +1,10 @@
 esphome:
   name: home
+  on_boot:
+    priority: -10
+    then:
+      - output.turn_on: bsp_battery_enable
+      - logger.log: "on_boot: battery measurement enabled"
 
 esp32:
   board: esp32-s3-devkitc-1
@@ -11,11 +16,9 @@ psram:
   mode: octal
   speed: 80MHz
 
-# Enable logging
 logger:
   level: DEBUG
 
-# Enable Home Assistant API
 api:
   password: ""
 
@@ -27,61 +30,27 @@ wifi:
   ssid: "TT_IoT"
   password: "xdkN2iXNrN3w4CPsHo"
 
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "Home Fallback Hotspot"
     password: "JcwSvS1e3HeW"
 
+  # при каждом пробуждении: подключились к Wi-Fi → один апдейт картинки
   on_connect:
-    - logger.log: "WiFi connected, forcing image update"
+    - logger.log: "WiFi connected, updating dashboard_image"
     - component.update: dashboard_image
 
 captive_portal:
-    
-interval:
-  # --- ДНЕВНОЕ обновление: каждые 1 мин ---
-  - interval: 60s
-    then:
-      - lambda: |-
-          // День: 07:00–8:00
-          auto t = id(sntp_time).now();
-          if (!t.is_valid()) return;
-          int h = t.hour;
-          if (h >= 7 && h < 8) {
-            ESP_LOGD("interval", "Daytime refresh: 1 min");
-            id(dashboard_image).update();   // обновить картинку
-          }  
 
-  - interval: 5min
-    then:
-      - lambda: |-
-          // День: 08:00–22:00
-          auto t = id(sntp_time).now();
-          if (!t.is_valid()) return;
-          int h = t.hour;
-          if (h >= 6 && h < 23) {
-            ESP_LOGD("interval", "Daytime refresh: 1 min");
-            id(dashboard_image).update();   // обновить картинку
-          }
-
-  # --- НОЧНОЕ обновление: каждые 60 мин ---
-  - interval: 60min
-    then:
-      - lambda: |-
-          // Ночь: 23:00–06:00
-          auto t = id(sntp_time).now();
-          if (!t.is_valid()) return;
-          int h = t.hour;
-          if (h >= 23 || h < 6) {
-            ESP_LOGD("interval", "Night refresh: 60 min");
-            id(dashboard_image).update();
-          }
-
-
+# === DEEP SLEEP: простой и надёжный ===
 deep_sleep:
   id: deep_sleep_ctrl
-  wakeup_pin: 
-    number: GPIO3 # Green button
+  # сколько работать после пробуждения
+  run_duration: 30s
+  # сколько спать до следующего пробуждения
+  sleep_duration: 5min
+  # зелёная кнопка как wakeup
+  wakeup_pin:
+    number: GPIO3
     allow_other_uses: true
   wakeup_pin_mode: INVERT_WAKEUP
 
@@ -89,15 +58,48 @@ time:
   - platform: sntp
     id: sntp_time
     timezone: Europe/Berlin
-    on_time:
-      - seconds: 0
-        minutes: 30
-        hours: 22
-        then:
-          - logger.log: "Going to deep sleep for the night"
-          - deep_sleep.enter:
-              id: deep_sleep_ctrl
-              sleep_duration: 8h
+
+# включает делитель для измерения батареи
+output:
+  - platform: gpio
+    pin: GPIO21
+    id: bsp_battery_enable
+
+sensor:
+  - platform: adc
+    pin: GPIO1
+    id: battery_voltage
+    name: "Battery Voltage"
+    attenuation: 12db
+    update_interval: 30s
+    filters:
+      - multiply: 2.0
+
+  - platform: template
+    id: battery_level
+    name: "Battery Level"
+    unit_of_measurement: "%"
+    device_class: battery
+    state_class: measurement
+    lambda: "return id(battery_voltage).state;"
+    update_interval: 30s
+    filters:
+      - calibrate_linear:
+          - 4.15 -> 100.0
+          - 3.96 -> 90.0
+          - 3.91 -> 80.0
+          - 3.85 -> 70.0
+          - 3.80 -> 60.0
+          - 3.75 -> 50.0
+          - 3.68 -> 40.0
+          - 3.58 -> 30.0
+          - 3.49 -> 20.0
+          - 3.41 -> 10.0
+          - 3.30 -> 5.0
+          - 3.27 -> 0.0
+      - clamp:
+          min_value: 0
+          max_value: 100
 
 binary_sensor:
   - platform: gpio
@@ -109,10 +111,11 @@ binary_sensor:
       allow_other_uses: true
     on_press:
       then:
-        - logger.log: "Button pressed -> going to deep sleep"
+        - logger.log: "Button pressed (manual sleep 4h)"
         - deep_sleep.enter:
             id: deep_sleep_ctrl
             sleep_duration: 4h
+
   - platform: gpio
     id: next_button
     pin:
@@ -123,10 +126,11 @@ binary_sensor:
       then:
         - logger.log: "Right button pressed -> reload dashboard"
         - component.update: dashboard_image
+
   - platform: gpio
     id: prev_button
     pin:
-      number: GPIO5  # Right button
+      number: GPIO5  # Left button
       mode: INPUT_PULLUP
       inverted: true
     on_press:
@@ -139,6 +143,9 @@ font:
   - file: "gfonts://Inter@700"
     id: myFont
     size: 24
+  - file: "gfonts://Roboto Mono@700"
+    id: battery_font
+    size: 12
 
 # define SPI interface
 spi:
@@ -179,3 +186,12 @@ display:
     update_interval: never
     lambda: |-
       it.image(0, 0, id(dashboard_image));
+      if (!isnan(id(battery_level).state)) {
+        it.printf(
+          it.get_width() - 4, 2,
+          id(battery_font),
+          TextAlign::TOP_RIGHT,
+          "%.0f%%",
+          id(battery_level).state
+        );
+      }
